--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "quotes": ["error", "single"],
+    "key-spacing": ["error", { "beforeColon": false }],
+    "semi": [2, "never"],
+    "block-spacing": "error",
+    "object-curly-spacing": ["error", "always"],
+    "indent": ["error", 2]
+  }
 }
