--- a/.env
+++ b/.env
@@ -2,4 +2,7 @@
 # Check [environment.d.ts](/environment.d.ts) for more information.
 #
 HEXO_ABSOLUTE_PATH=
+HIGHLIGHT_JS_RESOLVE_TYPE=bundled
 NEXT_PUBLIC_CND_PUBLIC_PATH_BASE_URL=
+HIGHLIGHT_JS_RESOLVE_DATA=javascript,java,rust,shell,plaintext,typescript
+NEXT_PUBLIC_HIGHLIGHT_JS_STYLE_PATH=https://cdn.staticfile.org/highlight.js/11.7.0/styles/github.min.css
