--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "hexo": "^7.3.0",
+    "highlight.js": "^11.10.0",
+    "html-react-parser": "^5.1.12",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
