--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "eslint ./src --fix && next build",
     "start": "next start",
     "lint": "eslint ./src --fix",
-    "test": "jest"
+    "test": "jest",
+    "analyze": "cross-env ANALYZE=true npm run build"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -21,11 +22,13 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@next/bundle-analyzer": "^14.2.5",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
