--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "semi": [2, "never"],
     "block-spacing": "error",
     "object-curly-spacing": ["error", "always"],
-    "indent": ["error", 2]
+    "indent": ["error", 2],
+    "no-unused-vars": "error"
   }
 }
