--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "analyze": "cross-env ANALYZE=true npm run build"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "hexo": "^7.3.0",
     "highlight.js": "^11.10.0",
     "html-react-parser": "^5.1.12",
+    "mime": "^4.0.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
