--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals", "eslint:recommended"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "quotes": ["error", "single"],
     "key-spacing": ["error", { "beforeColon": false }],
@@ -7,6 +8,6 @@
     "block-spacing": "error",
     "object-curly-spacing": ["error", "always"],
     "indent": ["error", 2],
-    "no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
