--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "eslint:recommended"],
+  "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:react/recommended"],
   "plugins": ["@typescript-eslint"],
   "rules": {
     "quotes": ["error", "single"],
@@ -8,6 +8,7 @@
     "block-spacing": "error",
     "object-curly-spacing": ["error", "always"],
     "indent": ["error", 2],
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/consistent-type-imports": "error"
   }
 }
