feat: release alpha

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexo-theme-particlex-nextjs",
+  "name": "nextjs-particlex-theme",
   "version": "0.1.0",
   "private": true,
   "scripts": {
