--- a/action.yml
+++ b/action.yml
@@ -1,21 +1,17 @@
 name: 'nextjs-particlex-theme'
 description: 'A theme use next.js to generate SSG files for your blog.'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  tag:
+    description: 'Which theme tag you want to use.'
     required: true
-    default: 'World'
-outputs:
-  random-number:
-    description: "Random number"
-    value: ${{ steps.random-number-generator.outputs.random-number }}
 runs:
   using: "composite"
   steps:
     - name: Checkout Main Repository
       uses: actions/checkout@v4
       with:
-        repository: IceOfSummer/nextjs-particlex-theme@alpha
+        repository: IceOfSummer/nextjs-particlex-theme
+        ref: ${{ inputs.tag }}
         path: nextjs-particlex-theme
 
     - name: Checkout Datasource Repository
@@ -39,8 +35,7 @@ runs:
         HEXO_PATH: '../datasource'
       run: 'cd nextjs-particlex-theme && npm run build'
 
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: nextjs-particlex-theme/out
+        path: 'nextjs-particlex-theme/out'
