--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-react": "^7.35.0",
+    "ignore-loader": "^0.1.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
