--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
-HEXO_ABSOLUTE_PATH=D:\Blog\iceofsummer.github.io
+HEXO_PATH=D:\Blog\iceofsummer.github.io
 #NEXT_PUBLIC_CND_PUBLIC_PATH_BASE_URL=https://selfb.asia/static/particlex/static/
 DATASOURCE_CACHE_ENABLE=true
