--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS='--trace-deprecation' next dev",
-    "build": "eslint ./src --fix && next build",
+    "build": "next build",
+    "check-and-build": "eslint ./src --fix && next build",
     "start": "next start",
     "lint": "tsc --noEmit && eslint ./src --fix",
     "test": "jest",
     "analyze": "cross-env ANALYZE=true npm run build"
   },
   "dependencies": {
-    "hexo": "^7.3.0",
+    "glob": "^11.0.0",
     "highlight.js": "^11.10.0",
     "html-react-parser": "^5.1.12",
     "jsdom": "^24.1.1",
     "mime": "^4.0.4",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "showdown": "^2.1.0",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -28,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/showdown": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "cross-env": "^7.0.3",
     "eslint": "^8",
