--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 # Check [environment.d.ts](/environment.d.ts) for more information.
 #
 DATASOURCE_CACHE_ENABLE=true
+NEXT_PUBLIC_CND_PUBLIC_PATH_BASE_URL=
