feat: 尝试自动修复 yaml 中的 \t 错误

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 # Check [environment.d.ts](/environment.d.ts) for more information.
 #
 NEXT_PUBLIC_CND_PUBLIC_PATH_BASE_URL=
+YAML_INDENT_SPACE_COUNT=2
